refactor: refactor org service and mapping